# internal/handler/mildware.go
@@ -16,13 +16,14 @@ func (h *Handler) userIdentity(c *gin.Context) {
 
 	headerParts := strings.Split(header, " ")
 
-	userId, Username, err := h.services.User.ParseToken(headerParts[1])
+	UserId, Username, Email, err := h.services.User.ParseToken(headerParts[1])
 	if err != nil {
 		NewErrorResponse(c, http.StatusUnauthorized, err.Error())
 		return
 	}
 
-	c.Set("user_id", userId)
+	c.Set("user_id", UserId)
 	c.Set("username", Username)
+	c.Set("email", Email)
 
 }
